Random estetic fixes

--- a/src/SharpScraperWebsite/Views/Home/Index.cshtml
+++ b/src/SharpScraperWebsite/Views/Home/Index.cshtml
@@ -10,8 +10,9 @@
     </div>
 
 </div>
-<img src="images/pastebin.png" align="right" class="img-rounded" alt="Pastebin Logo" width="304" height="236">
+<img src="images/pastebin.png"  style="float: left; margin: 0px 0px 55px 125px;" class="img-rounded" alt="Pastebin Logo" width="304" height="236">
 <br />
-         <h3> A Pastebin scraper written in C#. </h3> <br />
-   <h4>Look up the latest pastes found in the "archive" page! </h4>
+
+<h3 align="left"> A Pastebin scraper written in C#. </h3> <br />
+<h4 align="left">Look up the latest pastes found in the "archive" page! </h4>
 
